headlamp/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: headlamp
  namespace: headlamp
  annotations:
    # Use Contour as the Ingress controller
    kubernetes.io/ingress.class: contour
    # Enable WebSocket support for Headlamp
    projectcontour.io/websocket: "true"
spec:
  ingressClassName: contour
  rules:
  - host: headlamp.vplatform.local # This will be replaced by $HEADLAMP_INGRESS_HOSTNAME
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: headlamp
            port:
              number: 80
